--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,18 +6,26 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Zooom
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet", href="/public/css/home.css")
     body
         header
             h1 Zooom
         main
-            div#myStream
-                video#myFace(autoplay,playsinline,width="400",height="400")
-                button#mute Mute
-                button#camera Turn camera off    
-                select#cameras 
-                    option(value="device") Face Camera
-                select#audios
-                    option(value="device") Audio
+            div#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+            div#call 
+                div#myStream
+                    video#myFace(autoplay,playsinline,width="500",height="500")
+                    video#peerFace(autoplay,playsinline, width="500", height="500")
+
+                div#btnDiv 
+                    button#mute Mute
+                    button#camera Turn camera off    
+                    select#cameras 
+                        option(value="device") Face Camera
+                    
         script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js") 
             
